# ai-translator-task

./: .gitignore  README.md  docker-compose.yml
ai_translator_api/: Dockerfile.api.local  config.py  main.py  pyproject.toml
ai_translator_api/routes/: translator.py
ai_translator_api/schemas/: ai_service.py  translator.py
ai_translator_api/services/: ai_service.py
ai_translator_api/tests/: test_api.py  test_service.py
ai_translator_api/utils/: constants.py
ai_translator_client/: Dockerfile.client.local  index.html  package-lock.json  package.json
ai_translator_client/src/: App.jsx
ai_translator_client/src/constants/: languages.js
ai_translator_client/src/services/: translate.js
ai_translator_client/src/styles/: App.css
